--- a/templates/page/attorneys.html
+++ b/templates/page/attorneys.html
@@ -25,12 +25,12 @@
                         <div class="body">
                             <div class="title"><a href="{% url 'single_attorney' attorney.slug %}">{{ attorney.name }}</a></div>
                             <div class="position">{{ attorney.position }}</div>
-                            <div class="sosmed-icon icon-bg-secondary d-inline-flex">
+                            <!-- <div class="sosmed-icon icon-bg-secondary d-inline-flex">
                                 <a href="https://www.facebook.com/{{ attorney.facebook }}/"><i class="fa fa-facebook"></i></a> 
                                 <a href="https://www.twitter.com/{{ attorney.twitter }}/"><i class="fa fa-twitter"></i></a> 
                                 <a href="https://www.instagram.com/{{ attorney.instagram }}/"><i class="fa fa-instagram"></i></a> 
                                 <a href="https://www.linkedin.com/{{ attorney.linkedin }}/"><i class="fa fa-linkedin"></i></a> 
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
 </div>
 
 <!-- CTA -->
-<div class="section bg-primary">
+<!-- <div class="section bg-primary">
     <div class="content-wrap py-3">
         <div class="container">
             <div class="row">
@@ -55,7 +55,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 
 
