--- a/templates/base/components/footer.html
+++ b/templates/base/components/footer.html
@@ -7,16 +7,16 @@
             <div class="row">
                 <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="footer-item">
-                        <img src="/static/images/logo_w.png" alt="logo bottom" class="logo-bottom">
+                        <img src="/static/images/logo_22.png" alt="logo bottom" class="logo-bottom">
                         <div class="spacer-30"></div>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy.</p>
-                        <div class="sosmed-icon icon-bg-primary d-inline-flex">
+                        <p>"Kimseyi kabaca yargılamayın; çünkü her azizin geçmişi, her günahkarın bir geleceği vardır." Oscar Wilde</p>
+                        <!-- <div class="sosmed-icon icon-bg-primary d-inline-flex">
                             <a href="#"><i class="fa fa-facebook"></i></a> 
                             <a href="#"><i class="fa fa-twitter"></i></a> 
                             <a href="#"><i class="fa fa-instagram"></i></a> 
                             <a href="#"><i class="fa fa-pinterest"></i></a> 
                             <a href="#"><i class="fa fa-linkedin"></i></a> 
-                        </div>
+                        </div> -->
                     </div>
                 </div>					
 
@@ -30,24 +30,24 @@
                                 <div class="info-icon">
                                     <span class="fa fa-map-marker"></span>
                                 </div>
-                                <div class="info-text">Hürriyet Mahallesi Eğitim Sokak Adalet İş Merkezi No:27 Kat:4 34403 Kağıthane/İSTANBUL</div> </li>
+                                <div class="info-text">{{ firm.address }}</div> </li>
                             <li>
                                 <div class="info-icon">
                                     <span class="fa fa-phone"></span>
                                 </div>
-                                <div class="info-text">0533 785 22 36</div>
+                                <div class="info-text">0{{ firm.phone }}</div>
                             </li>
                             <li>
                                 <div class="info-icon">
                                     <span class="fa fa-envelope"></span>
                                 </div>
-                                <div class="info-text">osmanogluhukuk@gmail.com</div>
+                                <div class="info-text">{{ firm.email }}</div>
                             </li>
                             <li>
                                 <div class="info-icon">
                                     <span class="fa fa-clock-o"></span>
                                 </div>
-                                <div class="info-text">Pazartesi - Cuma 09:00 - 17:00</div>
+                                <div class="info-text">{{ firm.working_hour }}</div>
                             </li>
                         </ul>
 
@@ -78,8 +78,8 @@
                         
                         <ul class="list">
                             <li><a href="{% url 'about' %}" title="About Us">Hakkımızda</a></li>
-                            <li><a href="{% url 'attorneys' %}" title="Attorney">Avukatlarımız</a></li>
-                            <li><a href="{% url 'practice_areas' %}" title="Practice Areas">Çalışma Alanlarımız</a></li>
+                            <li><a href="{% url 'attorneys' %}" title="Attorney">Ekibimiz</a></li>
+                            <li><a href="{% url 'practice_areas' %}" title="Practice Areas">Uzmanlık Alanlarımız</a></li>
                             <li><a href="{% url 'contact' %}" title="Contact Us">İletişim</a></li>
                         </ul>
                     </div>
