--- a/templates/page/index.html
+++ b/templates/page/index.html
@@ -11,28 +11,21 @@
 <!-- BANNER -->
 <div id="oc-fullslider" class="banner">
     <div class="owl-carousel owl-theme full-screen">
+        {% for carousel in carousels  %}
         <div class="item">
-            <img src="/static/images/carousel.jpeg" alt="Slider">
+            <img src="{{ carousel.cover_image.url }}" alt="Slider">
             <div class="overlay-bg"></div>
             <div class="container d-flex align-items-center">
                 <div class="wrap-caption">
-                    <h4 class="caption-heading">Osmanoğlu Hukuk'a<br>Hoşgeldiniz</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>
+                    <h4 class="caption-heading"> Osmanoğlu <br> Hukuk ve Danışmanlık</h4>
+                    <p>{{ carousel.content }}</p>
 
                 </div>
             </div>
         </div>
-        <div class="item">
-            <img src="/static/images/carousel1.jpg" alt="Slider">
-            <div class="overlay-bg"></div>
-            <div class="container d-flex align-items-center">
-                <div class="wrap-caption">
-                    <h4 class="caption-heading">Osmanoğlu Hukuk'a<br>Hoşgeldiniz</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>
+        {% endfor %}
 
-                </div>
-            </div>
-        </div>
+
     </div>
     <div class="custom-nav owl-nav"></div>
 </div>
@@ -44,13 +37,11 @@
             <div class="row">
                 <div class="col-sm-12 col-md-12">
                     <div class="cta-overlap clearfix">
-                        <div class="body-text mb-3">
-                            <h3 class="my-1 text-white">Yanınızda olmasını isteyeceğiniz avukatlar</h3>
-                            <p class="uk18 mb-0 text-primary">Her dava bizim için çok önemlidir ve biz her zaman
-                                ciddiyetle ilgileniriz.</p>
+                        <div class="body-text pt-3">
+                            <h3 class="text-white">Hukuki süreciniz hakkında profesyonel yardım almak için</h3>
                         </div>
                         <div class="body-action">
-                            <a href="{% url 'contact' %}" class="btn btn-primary">ÜCRETSİZ DANIŞMA</a>
+                            <a href="#contact" class="btn btn-primary">Bizimle İletişime Geçebilirsiniz. </a>
                         </div>
                     </div>
                 </div>
@@ -59,7 +50,7 @@
     </div>
 </div>
 
-<!-- OUR PROMISE? -->
+<!-- OUR PROMISE? 
 <div class="section">
     <div class="content-wrap pb-0">
         <div class="container">
@@ -91,7 +82,7 @@
         </div>
     </div>
 </div>
-
+-->
 <!-- WHY CHOOSE -->
 <div class="section">
     <div class="content-wrap">
@@ -103,17 +94,19 @@
                     <h2 class="section-heading text-center mb-4">
                         Uzmanlık Alanlarımız
                     </h2>
-                    <p class="subheading text-center mb-5">Every case is very important to us and we always take care of
-                        them seriously.</p>
+                    <p class="subheading text-center mb-5">Osmanoğlu Hukuk ve Danışmanlık Bürosu müvekkillerine hukukun
+                        her alanında hizmet verir ve uzun soluklu ilişkiler kurar.</p>
                 </div>
 
             </div>
 
-            <div class="row">
+            <div class="row justify-content-center">
                 <!-- Item 1 -->
                 {% for practice_area in practice_areas %}
 
+
                 <div class="col-12 col-sm-6 col-md-4 mb-4">
+                    <a href="{% url 'single_practice_area' practice_area.slug %}">
                     <div class="box-icon-1 text-center">
                         <div class="icon">
                             <i class="fa fa-fire"></i>
@@ -123,7 +116,9 @@
                             <p>{{ practice_area.summary }}</p>
                         </div>
                     </div>
+                    </a>
                 </div>
+
 
                 {% endfor %}
 
@@ -133,8 +128,8 @@
 </div>
 
 <!-- MEET OUR ATTORNEY -->
-<div class="section">
-    <div class="content-wrap">
+<div class="section ">
+    <div class="content-wrap pt-0">
         <div class="container">
             <div class="row">
 
@@ -142,16 +137,11 @@
                     <h2 class="section-heading text-center mb-4">
                         Avukatlarımızla Tanışın
                     </h2>
-                    <p class="subheading text-center mb-5">Every case is very important to us and we always take care of
-                        them seriously.</p>
                 </div>
 
             </div>
             <div class="row">
                 <!-- Item 1 -->
-
-
-
 
                 {% for attorney in attorneys %}
                 <div class="col-sm-6 col-md-6 col-lg-3 mb-4">
@@ -160,9 +150,11 @@
                             <a href="{% url 'single_attorney' attorney.slug %}"><img
                                     src="{{ attorney.cover_image.url }}" alt="" class="img-fluid"></a>
                         </div>
+
                         <div class="body">
                             <div class="title"><a href="{{ attorney.cover_image.url }}">{{ attorney.name }}</a></div>
                             <div class="position">{{ attorney.position }}</div>
+                            <!-- Avukatlara ait sosyal medya hesapları
                             <div class="sosmed-icon icon-bg-secondary d-inline-flex">
                                 <a href="https://www.facebook.com/{{ attorney.facebook }}/"><i
                                         class="fa fa-facebook"></i></a>
@@ -173,6 +165,7 @@
                                 <a href="https://www.linkedin.com/{{ attorney.linkedin }}/"><i
                                         class="fa fa-linkedin"></i></a>
                             </div>
+                            -->
                         </div>
                     </div>
                 </div>
@@ -183,15 +176,81 @@
     </div>
 </div>
 
+<!-- FAQS -->
+<div class="section">
+    <div class="content-wrap pb-0">
+        <div class="container">
+
+            <div class="row">
+
+                <div class="col-sm-12 col-md-12">
+                    <h2 class="section-heading">
+                        Sıkça Sorulan Sorular
+                    </h2>
+                </div>
+            </div>
+
+            <div class="row align-items-end mt-5">
+
+                <div class="col-sm-12 col-md-12 col-lg-5">
+                    <img src="/static/images/faq.jpg" alt="" class="img-fluid img-border">
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-7">
+
+                    <div class="accordion rs-accordion" id="accordionExample">
+                        {% for faq in faqs %}
+                        <div class="card">
+                            <div class="card-header" id="heading{{ faq.pk }}">
+                                <h3 class="title">
+                                    <button class="btn btn-link" type="button" data-toggle="collapse"
+                                        data-target="#collapse{{ faq.pk }}" aria-expanded="true"
+                                        aria-controls="collapse{{ faq.pk }}">
+                                        {{ faq.question }}
+                                    </button>
+                                </h3>
+                            </div>
+                            <div id="collapse{{ faq.pk }}" class="collapse {% if forloop.first %} show {% endif %}"
+                                aria-labelledby="heading{{ faq.pk }}" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    {{ faq.answer }}
+                                </div>
+                            </div>
+                        </div>
+                        {% endfor %}
+                        <!-- Item 1 -->
+
+                        <!-- Item 2 -->
+
+                        <!-- Item 3 -->
+
+                        <!-- Item 4 -->
+
+                    </div>
+                    <!-- end accordion -->
+
+                    <p class="uk21 mt-5 text-black"><a href="{% url 'contact' %}">Aradığınız cevabı bulamadınız mı?
+                            Bizimle iletişime geçin!</a>
+                    </p>
+
+                    <div class="spacer-content"></div>
+
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+</div>
+
 <!-- CONTACT -->
-<div class="section bgi-cover-center" data-background="/static/images/dummy-img-1920x900-2.jpg">
+<div id="contact" class="section bgi-cover-center" data-background="/static/images/dummy-img-1920x900-2.jpg">
     <div class="content-wrap pb-0">
         <div class="container">
             <div class="row align-items-end">
 
                 <div class="col-12 col-md-7">
                     <h2 class="section-heading">
-                        Ücretsiz Danışma
+                        Bizimle İletişime Geçebilirsiniz
                     </h2>
                     <p class="subheading mb-5">Lütfen soru sormaktan çekinmeyin.</p>
 
@@ -207,8 +266,8 @@
                             </div>
                             <div class="col-sm-6 col-md-6">
                                 <div class="form-group">
-                                    <input type="email" class="form-control" name="p_email" placeholder="Email adresiniz"
-                                        required="">
+                                    <input type="email" class="form-control" name="p_email"
+                                        placeholder="Email adresiniz" required="">
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
@@ -247,21 +306,6 @@
         </div>
     </div>
 </div>
-
-<!-- CTA -->
-<div class="section bg-primary">
-    <div class="content-wrap py-3">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-md-12">
-                    <div class="text-center text-white">
-                        <h3>Ücretsiz Danışma Hattı : 0533 785 22 36</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div><!--  -->
 
 
 
