--- a/templates/base/components/footer.html
+++ b/templates/base/components/footer.html
@@ -1,13 +1,13 @@
 
 <!-- FOOTER SECTION -->
-<div class="footer" data-background="/static/images/dummy-img-1920x900-3.jpg">
+<div class="footer" data-background="/static/images/footerbackground.png">
     <div class="content-wrap">
         <div class="container">
             
             <div class="row">
                 <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="footer-item">
-                        <img src="/static/images/logo_22.png" alt="logo bottom" class="logo-bottom">
+                        <img src="{{ firm.cover_image.url }}" alt="logo bottom" class="logo-bottom">
                         <div class="spacer-30"></div>
                         <p>"Kimseyi kabaca yargılamayın; çünkü her azizin geçmişi, her günahkarın bir geleceği vardır." Oscar Wilde</p>
                         <!-- <div class="sosmed-icon icon-bg-primary d-inline-flex">
@@ -92,7 +92,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-12">
-                    <p class="ftex">Copyright 2019 &copy; <span class="color-primary">Lawe Html Template</span>. Designed by <span class="color-primary">Rometheme.</span></p> 
+                    <p class="ftex">Copyright 2019 &copy; <span class="color-primary">Lawe Html Template</span>. Designed by <span class="color-primary">Rometheme for Osmanoglu.</span></p> 
                 </div>
             </div>
         </div>
