--- a/templates/page/index.html
+++ b/templates/page/index.html
@@ -129,7 +129,7 @@
 
 <!-- MEET OUR ATTORNEY -->
 <div class="section ">
-    <div class="content-wrap pt-0">
+    <div class="content-wrap py-0">
         <div class="container">
             <div class="row">
 
@@ -178,7 +178,7 @@
 
 <!-- FAQS -->
 <div class="section">
-    <div class="content-wrap pb-0">
+    <div class="content-wrap py-0">
         <div class="container">
 
             <div class="row">
@@ -217,22 +217,16 @@
                             </div>
                         </div>
                         {% endfor %}
-                        <!-- Item 1 -->
 
-                        <!-- Item 2 -->
-
-                        <!-- Item 3 -->
-
-                        <!-- Item 4 -->
 
                     </div>
                     <!-- end accordion -->
 
-                    <p class="uk21 mt-5 text-black"><a href="{% url 'contact' %}">Aradığınız cevabı bulamadınız mı?
+                    <p class="uk21 mt-1 py-2 text-black"><a href="{% url 'contact' %}">Aradığınız cevabı bulamadınız mı?
                             Bizimle iletişime geçin!</a>
                     </p>
 
-                    <div class="spacer-content"></div>
+                   
 
                 </div>
 
@@ -243,7 +237,7 @@
 </div>
 
 <!-- CONTACT -->
-<div id="contact" class="section bgi-cover-center" data-background="/static/images/dummy-img-1920x900-2.jpg">
+<div id="contact" class="section bgi-cover-center" data-background="/static/images/contactbackgorund.png">
     <div class="content-wrap pb-0">
         <div class="container">
             <div class="row align-items-end">
